# NRF9160

01_simple_data_sending/: CMakeLists.txt  Kconfig  prj.conf  simple_data_sending.code-workspace  thingy91.conf
01_simple_data_sending/cert/: lets-encrypt-r3
01_simple_data_sending/src/: api_response_parser.c  api_response_parser.h  app_config.h  http_client.c  http_client.h  main.c  sensor_thread.c  sensor_thread.h  shared_data.c  shared_data.h  thingy91.c  thingy91.h
01_simple_data_sending/thingy91/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  zephyr_settings.txt
01_simple_data_sending/thingy91/Kconfig/: Kconfig.modules  Kconfig.shield  Kconfig.shield.defconfig
01_simple_data_sending/thingy91/mcuboot/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  child_image_preload.cmake  cmake_install.cmake  compile_commands.json  shared_vars.cmake  zephyr_modules.txt
01_simple_data_sending/thingy91/tfm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  install_manifest.txt
01_simple_data_sending/thingy91/zephyr/: .cmake.dotconfig.checksum  .config  app_moved_test_update.hex  app_signed.hex  app_test_update.hex  cmake_install.cmake  dev_handles.c  dfu_application.zip_manifest.json  dts.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd  linker_zephyr_pre1.cmd.dep  mcuboot_primary_app.hex  merged.hex  runners.yaml  tfm_nonsecure.hex  tfm_secure.hex  zephyr.dts  (+8 more)
(+269 files in other folders)
